Fixed: spacing on reservation page

--- a/sites/all/themes/dynamo/style/developer.css
+++ b/sites/all/themes/dynamo/style/developer.css
@@ -180,7 +180,8 @@ iframe.pc-booking { width: 100%; height: 100%; min-height: 600px;}
 .pane-alma_user_loans_details table,
 .pane-alma_user_reservations_details table { margin-bottom: 16px; }
 
-.pane-alma_user_reservations_details h3, .pane-alma_user_loans_details h3{ color: #790f21; }
+.pane-alma_user_reservations_details h3, .pane-alma_user_loans_details h3{ color: #790f21;}
+.pane-alma_user_reservations_details h3 { padding-top: 25px; }
 
 .pane-alma_user_reservations_details .update-controls-button .edit-update{
   height: 25px;
